:rocket: Add Rate system

--- a/src/components/Parts/RateButtons/style.module.scss
+++ b/src/components/Parts/RateButtons/style.module.scss
@@ -1,9 +1,19 @@
 .SvgButton {
-    svg {
-        width: 16px;
-        cursor: pointer;
-    }
-    span {
-        font-size: 12px;
-    }
+  svg {
+    width: 16px;
+    cursor: pointer;
+  }
+  span {
+    font-size: 12px;
+  }
+}
+.IsDisliked {
+  svg {
+    fill: red;
+  }
+}
+.IsLiked {
+  svg {
+    fill: blue;
+  }
 }
